k8s/09-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: attendee-ingress
  namespace: attendee
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "attendee-ip"
    networking.gke.io/managed-certificates: "attendee-cert"
spec:
  rules:
    - host: attendee.capturemeet.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: attendee-web
                port:
                  number: 8000
